--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
 
 .titleAndSubt, 
 .formContainer,
-.newTaskForm {
+.newTaskForm,
+.activitiesList {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,4 +19,20 @@ body {
 
 .taskToListBtn {
   background-color: #F2E205;
+}
+
+.activityCard {
+  background-color: #EB6157;
+  border-color: #6B2D28;
+  border-radius: 4px;
+  border: 1px solid;
+  width: 60vw;
+  height: 50px;
+}
+
+.taskInputField {
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: lightgrey;
+  width: 60vw;
 }
