color changed activityCardTaskDone

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h2 {
 
 .activityCardTaskDone {
   background-color: #95F768;
-  border-color: #68AD49;
+  border-color: #3e7e21;
   color: #416B2D;
 }
 
