--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ h2 {
 @media (max-width: 425px) {
   body {
     background-image: url(./Assets/bgImg.jpg);
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
